--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,6 +10,10 @@ html, body {
   margin: 0;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 body {
   font-family: $sans;
 }
@@ -45,19 +49,82 @@ body {
 	border-top: 30px solid #37f;
 	display: flex;
 	flex-wrap: wrap;
-	.fill { width: 240px; }
+	.fill { width: 240px; height: 80px; }
     background: #eee;
+    border-bottom: 5px solid #eee;
 
-	span, a {
+	a {
 		line-height: 80px;
-		padding: 0 20px;
+		padding: 0 16px;
 		color: #37f;
 		font-weight: bold;
-	}
-	a {
 		font-size: 30px;
+		text-decoration: none;
+        &:hover {
+            text-shadow: 4px 4px 4px rgba(0,0,0,.3);
+        }
+    }
+    a.ham {
+        padding: 0;
+        width: 60px;
+        width: calc(100% - 240px);
+        max-width: 100px;
+        text-align: center;
+        color: #000;
+        display: none;
+    }
+    a.link {
+        background: #fff;
+        color: #000;
+        font-weight: normal;
+        white-space: nowrap;
+        text-align: center;
+        padding: 22px;
+        font-size: 14px;
+        line-height: 18px;
+        border-right: 1px solid #ddd;
+        &.oneline { padding: 31px 22px; }
+    }
+    a.tel {
 		flex-grow: 1;
 		text-align: right;
-		text-decoration: none;
 	}
+}
+
+@media (max-width: 1180px) {
+    .navtop {
+        a.ham { display: block; }
+        a.link {
+            display: block;
+            overflow:  hidden;
+            flex-basis: 100%;
+            height: 0px;
+            line-height: 14px;
+            padding: 0;
+            &.oneline { padding: 0; }
+            border: 0 solid #fff;
+            position: relative;
+            color: #fff;
+
+            border-right: none;
+            br { display: none; }
+            order: 4;
+
+        }
+        &.animateHeight a.link { transition: padding .25s; }
+        a.tel { order: 3; }
+
+        &.expand {
+            a.link {
+                color: #000;
+                border-bottom: 1px solid #ddd;
+                height: inherit;
+                padding: 13px 0 9px 0;
+                &:hover {
+                    background: #ddf;
+                    text-shadow: none;
+                }
+            }
+        }
+    }
 }
