--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -187,7 +187,7 @@ article > .block {
     ul.left { float: left; }
     ul.right { float: right; }
     ul li {
-        background: url(/i/heart-bullet.gif) no-repeat 0 3px;
+        background: url(/u/heart-bullet.gif) no-repeat 0 3px;
         list-style: none;
         padding: 0 0 15px 30px;
     }
