partial work on apply banner display

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -266,28 +268,6 @@ article > .block {
         -webkit-transition: opacity .5s;
         transition: opacity .5s;
     }
-    &.apply {
-        img {
-            left: 0;
-            opacity: .8;
-        }
-        hr {
-            margin: .3em 0 .15em 0;
-            transition: margin .5s, height .5s;
-        }
-        table {
-            position: absolute;
-            height: 0;
-            bottom: .5em;
-            width: auto;
-        }
-        td {
-            vertical-align: bottom;
-            padding: .4em .8em;
-            background-color: rgba(255,255,255,.5);
-            border-radius: .5em;
-        }
-    }
 
     table {
         position: relative;
@@ -363,9 +343,68 @@ article > .block {
         .clickme { font-size: 2.475vh; }
     }
 }
-@media (max-height: 800px) {
-    .title-banner.apply hr { margin: 0; height: 0; }
+
+.apply-banner {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+    border-top: 1px solid #ddd;
+    position: relative;
+    background: #d9d4d0;
+    height: 30vw;
+    max-height: calc((100vh - 95px)/2);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2.2vw;
+
+    .left {
+        position: relative;
+        img {
+            width: 54vw;
+            height: 30vw;
+        }
+        small {
+            display: inline-block;
+            font-size: 60%;
+            line-height: 1.3em;
+            font-style: italic;
+        }
+
+        hr {
+            margin: .2em 0 .4em 0;
+        }
+        div {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            margin: 1em 1em 1em 2em;
+            background: rgba(255, 255, 255, .7);
+            border-radius: 1em;
+            padding: .5em;
+            small { display: block; padding: 0; margin: 0; }
+        }
+    }
 }
+
+@media (max-height: 800px) {
+    .apply-banner hr { margin: 0; height: 0; }
+}
+/*
+@media (max-width: 600px) {
+    /* set font sizes so they don't shrink beyond what is visible * /
+    .apply-banner { min-height: 160px; font-size: 15px;
+        img { min-height: 160px; min-width: 288px; }
+        small { font-size: 9px; }
+    }
+}
+@media (min-width: 167vh) {
+    /* set font sizes so they don't continue to grow * /
+    .apply-banner { height: 50vh; font-size: 4.2vh;
+        small { font-size: 2.5vh; }
+    }
+}
+*/
 
 .call {
     display: block;
