overlay hyperlink on top of apply-banner

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -410,6 +410,13 @@ article > .block {
             margin: .8em 1.6em 0 1.6em;
         }
     }
+    a {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+    }
 }
 
 @media (max-height: 800px) {
