--- a/src/styles/simplified.scss
+++ b/src/styles/simplified.scss
@@ -49,13 +49,13 @@ $indent: 25px;
     }
 
     ul {
-        list-style: none;
+        list-style: none !important; // attempt to override .nested-list .hentry ul>li from new wordpress
         padding: 0;
-        margin: 0;
+        margin: 0 !important; // attempt to override .nested-list .hentry ul from new wordpress
     }
     li {
         padding-left: $indent;
-        text-indent: -$indent;
+        text-indent: -$indent !important; // attempt to override .nested-list .hentry ul>li from new wordpress
         margin-bottom: 10px;
     }
     li::before {
